Alteração na seção Projetos

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <article class="col col-12 col-6">
                 <img src="img/projeto07.jpg" alt="" class="img_projetos">
                 <h2 class="main_content_title fonte">projeto 07</h2>
-                <p>No desafio da aula 12 continuamos o aprendizado em JavaScript, desta fez utilizando a árvore
+                <p>No desafio da aula 12 continuamos o aprendizado em JavaScript, desta vez utilizando a árvore
                     DOM.<br>Desenvolvi uma calculadora interativa, contemplando as operações básicas da aritmética.</p>
                 <div class="botoes">
                     <a href="https://gabponch.github.io/projeto-07/" target="_blank" class="botao_article">github
